- added quote at the beginning of chapter on Teaching (example for other chapters) - update all chapters - add listing of all 1st author publications - add pdfs of all 1st author publications (with option of select them or not)

--- a/first_author_papers.bib
+++ b/first_author_papers.bib
@@ -5,6 +5,7 @@
   year = {2007},
   url = {http://thesesups.ups-tlse.fr/111/},
   copyright = {All rights reserved},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\G8576QHI\\Hillairet - 2007 - Applications du formalisme des faisceaux gaussiens.pdf},
   school = {Universit{\'e} de Toulouse III - Paul Sabatier - U.F.R. P.C.A.}
 }
 
@@ -86,23 +87,6 @@
   journal = {Fusion Engineering and Design},
   language = {en},
   number = {6-8}
-}
-
-@article{hillairet2012,
-  title = {Design and Testing of a {{5GHz TE10}}\textendash{{TE30}} Mode Converter Mock-up for the Lower Hybrid Antenna Proposed for {{ITER}}},
-  author = {Hillairet, J. and Achard, J. and Brun, C. and Rasio, S. and Soler, B.},
-  year = {2012},
-  month = mar,
-  volume = {87},
-  pages = {275--280},
-  issn = {09203796},
-  doi = {10/f3w82q},
-  abstract = {The design and overall dimensions of a 5 GHz TE10\textendash{}TE30 mode converter are presented. This mode converter is a RF element of a 20 MW CW lower hybrid system proposed for ITER. A low power mock-up of this device has been manufactured at CEA/IRFM and measured at low power. RF measurements indicate a return loss of 40 dB and a transmission loss of 4.78 dB {$\pm$} 0.03 dB for the three outputs. The forward conversion efficiency from TE10 mode to TE30 has been measured from electric field probing to 99.9\%. The good RF performances obtained validate the RF design of this element.},
-  copyright = {All rights reserved},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Hillairet et al._2012_Design and testing of a 5 GHz TE 10-TE 30 mode converter mock-up for the lower hybrid antenna proposed for ITER.pdf},
-  journal = {Fusion Engineering and Design},
-  language = {en},
-  number = {3}
 }
 
 @inproceedings{hillairet2012-1,
@@ -227,18 +211,6 @@
   copyright = {All rights reserved},
   file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Hillairet et al._2019_Lower hybrid range cold magnetized plasma coupling in ANSYS HFSS.pdf},
   journal = {Fusion Engineering and Design},
-  language = {en}
-}
-
-@article{hillairet2019-1,
-  title = {Radio-{{Frequency Hands}}-on for {{Nuclear Fusion Master Students}}},
-  author = {Hillairet, Julien and Achard, Joelle and Ragona, Riccardo},
-  year = {2019},
-  issn = {0143-0807},
-  doi = {10/ggjf4p},
-  abstract = {High-power Continuous Wave Radio-Frequency (RF) systems in the megawatt range of power are commonly used in nuclear fusion experiments. Such kinds of RF systems being rather rare, master students do not know how these systems are done in practice, even students engaged in nuclear fusion courses. This is the reason why, as part of the French and European masters in fusion physics and technologies, dedicated practical work on topics related to plasma RF heating are proposed to students. During few days, these students discover how to perform RF measurements and succeed in characterizing real-scale components used in plasma RF heating experiments. This paper details four hands-on which have been conducted for eight years with few tens of students having no prior knowledge in RF engineering.},
-  copyright = {All rights reserved},
-  journal = {European Journal of Physics},
   language = {en}
 }
 
