--- a/tex/chap4.tex
+++ b/tex/chap4.tex
@@ -1,3 +1,11 @@
+% chapter style
+\setchapterstyle{kao}
+\setchapterpreamble[u]{
+	\dictum[R. P. Feynman] %, QED: The Strange Theory of Light and Matter]
+	{What one fool could understand, another can.}
+	\margintoc
+}
+
 \chapter{Fusion Education}
 
 \section{Master Fusion}
