--- a/tex/chap2.tex
+++ b/tex/chap2.tex
@@ -1,13 +1,21 @@
 % RF coupling
-%\chaptertoc{}
 \chapter{RF Coupling}
+\label{chap:rf_coupling}
+\margintoc
 
-\section{theory LH + IC}
+\section{Waves In Plasma}
+\subsection{Cold Plasma Waves}
+\subsection{Dispersion Relation}
 
-\section{LHCD: ALOHA}
 
-\section{ICRH}
+\section{ICRF}
+\subsection{ICRF Dispersion Relation}
+\subsection{ICRF Wave Polarization}
+\subsection{Full-Wave Antenna Coupling}
 
-\subsection{title}
+\section{LHRF}
+\subsection{LHRF Dispersion Relation}
+\subsection{LHRF Wave Polarization}
 
-\subsection{HFSS and WEST}
+\subsection{The ALOHA code}
+
