--- a/styles/environments.sty
+++ b/styles/environments.sty
@@ -1,5 +1,5 @@
 %% environments.sty
-%% Copyright 2019 Federico Marotta
+%% Copyright 2020 Federico Marotta
 %
 % This work may be distributed and/or modified under the
 % conditions of the LaTeX Project Public License, either version 1.3
@@ -21,7 +21,6 @@
 %	ITEMS
 %----------------------------------------------------------------------------------------
 
-\RequirePackage{amssymb}
 \renewcommand{\labelitemi}{\small$\blacktriangleright$}
 \renewcommand{\labelitemii}{\textbullet}
 \RequirePackage{enumitem}
@@ -80,7 +79,7 @@
 }
 
 \newcounter{kaocounter}
-\numberwithin{kaocounter}{section}
+\counterwithin{kaocounter}{section}
 \newcommand*{\kaocounterformat}{% Format for the caption
 	Comment~\thekaocounter\csname autodot\endcsname}
 \newcommand*{\fnum@kaocounter}{\kaocounterformat}
