--- a/styles/kao.sty
+++ b/styles/kao.sty
@@ -1,7 +1,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % kaobook
-% LaTeX Class
-% Version 1.0 (5/6/19)
+% kao Styling Package
+% Version 1.2 (4/1/2020)
 %
 % This template originates from:
 % https://www.LaTeXTemplates.com
@@ -20,7 +20,7 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\ProvidesPackage{styles/kao}[2015/06/21 v3.5.2 Common code for the kao style]
+\ProvidesPackage{styles/kao}[2020/03/12 v1.1 kao]
 
 %----------------------------------------------------------------------------------------
 %	USEFUL PACKAGES AND COMMANDS
@@ -29,6 +29,7 @@
 % \RequirePackage[l2tabu,orthodox]{nag} % turn on warnings because of bad style
 \RequirePackage{etoolbox} % Easy programming to modify TeX stuff
 \RequirePackage{calc} % Make calculations
+\RequirePackage{iftex} % Check wether XeTeX is being used
 \RequirePackage{xifthen} % Easy conditionals
 \RequirePackage{xkeyval} % Manage class options
 \RequirePackage{xparse} % Parse arguments for macros
@@ -49,7 +50,7 @@
 		\renewcommand{\@plaintitle}{\title} % Use full title
 	}{ % If there is a plain title
 		\renewcommand{\@plaintitle}{#1} % Use provided plain-text title
-	}
+	}%
 	\hypersetup{pdftitle={\@plaintitle}} % Set the PDF metadata title
 }
 
@@ -62,12 +63,12 @@
 		\renewcommand{\@plainauthor}{\author}% Use full author
   	}{ % If there is a plain author
 		\renewcommand{\@plainauthor}{#1}% Use provided plain-text author
-	}
+	}%
 	\hypersetup{pdfauthor={\@plainauthor}} % Set the PDF metadata author
 }
 
 % Make a bookmark to the title page
-\pretocmd{\maketitle}{\pdfbookmark[1]{\@plaintitle}{title}}{}{}
+\pretocmd{\maketitle}{\pdfbookmark[1]{\@plaintitle}{title}}{}{}%
 
 %----------------------------------------------------------------------------------------
 %	PARAGRAPH FORMATTING
@@ -120,7 +121,7 @@
 \RequirePackage[section]{placeins} % Prevent floats to cross sections
 
 % Request more floats
-\extrafloats{100}
+\extrafloats{100}%
 
 %------------------------------------------------
 
@@ -137,9 +138,9 @@
 \RequirePackage{footnotebackref} % Creates back references from footnotes to text
 
 % Fix the color of the footnote marker when back-referenced
-\patchcmd{\footref}{\ref}{\hypersetup{colorlinks=black}\ref}{}{}
+\patchcmd{\footref}{\ref}{\hypersetup{colorlinks=black}\ref}{}{}%
 % Workaround to fix back references
-\edef\BackrefFootnoteTag{bhfn:\theBackrefHyperFootnoteCounter}
+\edef\BackrefFootnoteTag{bhfn:\theBackrefHyperFootnoteCounter}%
 
 % FIXME: I am not able to choose the paragraph layout of footnotes, probably the footnotes package conflicts with scrbook.
 %\renewcommand{\footnotelayout}{\@margin@par}
@@ -159,40 +160,40 @@
 %\RequirePackage[marginnote=true]{snotez} % Provides options for sidenotes
 
 \def\snotez@if@nblskip#1{%
-\expandafter\ifx\@car#1\@nil*%
-\expandafter\@firstoftwo
-\else
-\expandafter\@secondoftwo
-\fi
+	\expandafter\ifx\@car#1\@nil*%
+		\expandafter\@firstoftwo%
+	\else%
+		\expandafter\@secondoftwo%
+	\fi%
 }
 
 % Redefine the command to print marginnotes:
 % (a) the optional offset argument goes at the first position
 % (b) the offset can also be a multiple of baselineskip, like for snotez's \sidenote
 % Usage: \marginnote[<offset>]{Text of the note.}
-\let\oldmarginnote\marginnote
+\let\oldmarginnote\marginnote%
 \renewcommand{\marginnote}[2][0pt]{%
 	\oldmarginnote{#2}[\snotez@if@nblskip{#1}{\@cdr#1\@nil\baselineskip}{#1}]%
 }
 
 % Redefine the following sidenotes' command to use the kao version of marginnote
-\RenewDocumentCommand \@sidenotes@placemarginal { m m }
-{
-\IfNoValueOrEmptyTF{#1}
-{\marginpar{#2}}
-{\marginnote[#1]{#2}}
+\RenewDocumentCommand \@sidenotes@placemarginal { m m }%
+{%
+	\IfNoValueOrEmptyTF{#1}%
+	{\marginpar{#2}}%
+	{\marginnote[#1]{#2}}%
 }
 
 % Initially set the counter to zero instead of 1, and update it before printing the sidenote.
-\setcounter{sidenote}{0}
+\setcounter{sidenote}{0}%
 \RenewDocumentCommand\sidenote{ o o +m }{%
-\IfNoValueOrEmptyTF{#1}{%
-	\refstepcounter{sidenote}% This command has been moved here
-}{%
-}%
-\sidenotemark[#1]%
-\sidenotetext[#1][#2]{#3}%
-\@sidenotes@multimarker%
+	\IfNoValueOrEmptyTF{#1}{%
+		\refstepcounter{sidenote}% This command has been moved here
+	}{%
+	}%
+	\sidenotemark[#1]%
+	\sidenotetext[#1][#2]{#3}%
+	\@sidenotes@multimarker%
 }
 
 % % Formatting sidenotes
@@ -205,25 +206,25 @@
 % Formatting sidenotes
 \RenewDocumentCommand \@sidenotes@thesidenotemark { m }%
 {%
-\leavevmode%
-\ifhmode%
-\edef\@x@sf{\the\spacefactor}%
-\nobreak%
-\fi%
-\hbox{\@textsuperscript{\normalfont#1}}%
-\ifhmode%
-\spacefactor\@x@sf%
-\fi%
-\relax%
-}%
-
-\RenewDocumentCommand\sidenotetext{ o o +m }% number, offset, text
-{%
-\IfNoValueOrEmptyTF{#1}%
-{%
-\@sidenotes@placemarginal{#2}{\@margin@par\thesidenote:\enskip#3}%
-}%
-{\@sidenotes@placemarginal{#2}{\@margin@par#1:\enskip#3}}%
+	\leavevmode%
+	\ifhmode%
+		\edef\@x@sf{\the\spacefactor}%
+		\nobreak%
+	\fi%
+	\hbox{\@textsuperscript{\normalfont#1}}%
+	\ifhmode%
+		\spacefactor\@x@sf%
+	\fi%
+	\relax%
+	}%
+	%
+	\RenewDocumentCommand\sidenotetext{ o o +m }% number, offset, text
+	{%
+		\IfNoValueOrEmptyTF{#1}%
+	{%
+		\@sidenotes@placemarginal{#2}{\@margin@par\thesidenote:\enskip#3}%
+	}%
+	{\@sidenotes@placemarginal{#2}{\@margin@par#1:\enskip#3}}%
 }
 
 %----------------------------------------------------------------------------------------
@@ -236,6 +237,7 @@
 \RequirePackage{booktabs} % Nicer tables
 \RequirePackage{multirow} % Cells occupying multiple rows in tables
 \RequirePackage{multicol} % Multiple columns in dictionary
+\RequirePackage{rotating} % Allows tables and figures to be rotated
 \RequirePackage[hypcap=true]{caption} % Correctly placed anchors for hyperlinks
 % \RequirePackage{atbegshi}
 % \RequirePackage{perpage}
@@ -245,179 +247,178 @@
 \RequirePackage{floatrow} % Set up captions of floats
 \RequirePackage{dblfloatfix} % Better positioning of wide figures and tables
 
-
 % Improve the figure placing (see https://www.overleaf.com/learn/latex/Tips)
-\def\topfraction{.9}
-\def\textfraction{0.35}
-\def\floatpagefraction{0.8}
+\def\topfraction{.9}%
+\def\textfraction{0.35}%
+\def\floatpagefraction{0.8}%
 
 % Set the space between floats and main text
-\renewcommand\FBaskip{.4\topskip}
-\renewcommand\FBbskip{\FBaskip}
+\renewcommand\FBaskip{.4\topskip}%
+\renewcommand\FBbskip{\FBaskip}%
 
 % Tighten up space between displays (e.g., equations) and make symmetric (from tufte-latex)
-\setlength\abovedisplayskip{6pt plus 2pt minus 4pt}
-\setlength\belowdisplayskip{6pt plus 2pt minus 4pt}
-\abovedisplayskip 10\p@ \@plus2\p@ \@minus5\p@
-\abovedisplayshortskip \z@ \@plus3\p@
-\belowdisplayskip \abovedisplayskip
-\belowdisplayshortskip 6\p@ \@plus3\p@ \@minus3\p@
+\setlength\abovedisplayskip{6pt plus 2pt minus 4pt}%
+\setlength\belowdisplayskip{6pt plus 2pt minus 4pt}%
+\abovedisplayskip 10\p@ \@plus2\p@ \@minus5\p@%
+\abovedisplayshortskip \z@ \@plus3\p@%
+\belowdisplayskip \abovedisplayskip%
+\belowdisplayshortskip 6\p@ \@plus3\p@ \@minus3\p@%
 
 \setlength\columnseprule{.4pt} % Set the width of vertical rules in tables
 
 % Environment to hold a margin figure (from the sidenotes package)
 % We redefine it here because we want to use our own caption formatting.
-\newsavebox{\@kao@marginfigurebox}
+\newsavebox{\@kao@marginfigurebox}%
 \renewenvironment{marginfigure}[1][0pt]{ % The optional parameter is the vertical offset
 	%\let\footnotemark\mpfootnotemark
 	\FloatBarrier % Force LaTeX to place previous floats
 	\mparshift{\snotez@if@nblskip{#1}{\@cdr#1\@nil\baselineskip}{#1}} % Move the figure up or down according to the offset argument
-	\begin{lrbox}{\@sidenotes@marginfigurebox}
-		\begin{minipage}{\marginparwidth}
-			\captionsetup{type=figure}
+	\begin{lrbox}{\@sidenotes@marginfigurebox}%
+		\begin{minipage}{\marginparwidth}%
+			\captionsetup{type=figure}%
 			% \centering % Better not to center margin figures
-}{
-		\end{minipage}
-	\end{lrbox}
+}{%
+		\end{minipage}%
+	\end{lrbox}%
 	\marginpar{\usebox{\@sidenotes@marginfigurebox}} % Place the figure box in the margin
 }
 
 % Environment to hold a margin table (from the sidenotes package)
-\newsavebox{\@kao@margintablebox}
+\newsavebox{\@kao@margintablebox}%
 \renewenvironment{margintable}[1][0pt]{ % The optional parameter is the vertical offset
 	\FloatBarrier % Force LaTeX to place previous floats
 	\mparshift{\snotez@if@nblskip{#1}{\@cdr#1\@nil\baselineskip}{#1}} % Move the table up or down according to the offset argument
-	\begin{lrbox}{\@sidenotes@margintablebox}
-		\begin{minipage}{\marginparwidth}
-			\captionsetup{type=table}
-}{
-		\end{minipage}
-	\end{lrbox}
+	\begin{lrbox}{\@sidenotes@margintablebox}%
+		\begin{minipage}{\marginparwidth}%
+			\captionsetup{type=table}%
+}{%
+		\end{minipage}%
+	\end{lrbox}%
 	\marginpar{\usebox{\@sidenotes@margintablebox}} % Place the table box in the margin
 }
 
 % Environment to hold a margin listing
-\newsavebox{\@sidenotes@marginlistingbox}
+\newsavebox{\@sidenotes@marginlistingbox}%
 \newenvironment{marginlisting}[1][0pt]{ % The optional parameter is the vertical offset
 	\FloatBarrier % Force LaTeX to place previous floats
 	\mparshift{\snotez@if@nblskip{#1}{\@cdr#1\@nil\baselineskip}{#1}} % Move the listing up or down according to the offset argument
-	\begin{lrbox}{\@sidenotes@marginlistingbox}
-		\begin{minipage}{\marginparwidth}
-			\captionsetup{type=lstlisting}
-}{
-		\end{minipage}
-	\end{lrbox}
+	\begin{lrbox}{\@sidenotes@marginlistingbox}%
+		\begin{minipage}{\marginparwidth}%
+			\captionsetup{type=lstlisting}%
+}{%
+		\end{minipage}%
+	\end{lrbox}%
 	\marginpar{\usebox{\@sidenotes@marginlistingbox}} % Place the listing box in the margin
 }
 
 % Change the position of the captions
-\DeclareFloatSeparators{marginparsep}{\hskip\marginparsep}
-\if@twoside
+\DeclareFloatSeparators{marginparsep}{\hskip\marginparsep}%
+\if@twoside%
 	\floatsetup[figure]{ % Captions for figueres
 		margins=hangoutside, % Put captions in the margins
-		facing=yes,
-		capposition=beside,
-		capbesideposition={bottom,outside},
-		capbesideframe=yes,
+		facing=yes,%
+		capposition=beside,%
+		capbesideposition={bottom,outside},%
+		capbesideframe=yes,%
 		capbesidewidth=\marginparwidth, % Width of the caption equal to the width of the margin
 		capbesidesep=marginparsep,
 		floatwidth=\textwidth, % Width of the figure equal to the width of the text
 	}
 	\floatsetup[widefigure]{ % Captions for wide figures
 		margins=hangoutside, % Put captions below the figure
-		facing=yes,
-		capposition=bottom
+		facing=yes,%
+		capposition=bottom%
 	}
 	\floatsetup[table]{ % Captions for tables
 		margins=hangoutside, % Put captions in the margin
-		facing=yes,
-		capposition=beside,
-		capbesideposition={top,outside},
+		facing=yes,%
+		capposition=beside,%
+		capbesideposition={top,outside},%
 		%capbesideposition=outside,
-		capbesideframe=yes,
+		capbesideframe=yes,%
 		capbesidewidth=\marginparwidth, % Width of the caption equal to the width of the margin
-		capbesidesep=marginparsep,
+		capbesidesep=marginparsep,%
 		floatwidth=\textwidth, % Width of the figure equal to the width of the text
 	}
 	\floatsetup[widetable]{ % Captions for wide tables
 		margins=hangoutside, % Put captions above the table
-		facing=yes,
-		capposition=above
+		facing=yes,%
+		capposition=above%
 	}
 	\floatsetup[lstlisting]{ % Captions for lstlistings
 		margins=hangoutside, % Put captions in the margin
-		facing=yes,
-		capposition=beside,
-		capbesideposition={top,outside},
+		facing=yes,%
+		capposition=beside,%
+		capbesideposition={top,outside},%
 		%capbesideposition=outside,
-		capbesideframe=yes,
+		capbesideframe=yes,%
 		capbesidewidth=\marginparwidth, % Width of the caption equal to the width of the margin
-		capbesidesep=marginparsep,
+		capbesidesep=marginparsep,%
 		floatwidth=\textwidth, % Width of the figure equal to the width of the text
 	}
 	\floatsetup[listing]{ % Captions for listings (minted package)
 		margins=hangoutside, % Put captions in the margin
-		facing=yes,
-		capposition=beside,
-		capbesideposition={top,outside},
+		facing=yes,%
+		capposition=beside,%
+		capbesideposition={top,outside},%
 		%capbesideposition=outside,
-		capbesideframe=yes,
+		capbesideframe=yes,%
 		capbesidewidth=\marginparwidth, % Width of the caption equal to the width of the margin
-		capbesidesep=marginparsep,
+		capbesidesep=marginparsep,%
 		floatwidth=\textwidth, % Width of the figure equal to the width of the text
 	}
 \else
 	\floatsetup[figure]{ % Captions for figueres
 		margins=hangright, % Put captions in the margins
-		facing=yes,
-		capposition=beside,
-		capbesideposition={bottom,right},
-		capbesideframe=yes,
+		facing=yes,%
+		capposition=beside,%
+		capbesideposition={bottom,right},%
+		capbesideframe=yes,%
 		capbesidewidth=\marginparwidth, % Width of the caption equal to the width of the margin
-		capbesidesep=marginparsep,
+		capbesidesep=marginparsep,%
 		floatwidth=\textwidth, % Width of the figure equal to the width of the text
 	}
 	\floatsetup[widefigure]{ % Captions for wide figures
 		margins=hangright, % Put captions below the figure
-		facing=no,
-		capposition=bottom
+		facing=no,%
+		capposition=bottom%
 	}
 	\floatsetup[table]{ % Captions for tables
 		margins=hangright, % Put captions in the margin
-		facing=yes,
-		capposition=beside,
-		capbesideposition={top,right},
+		facing=yes,%
+		capposition=beside,%
+		capbesideposition={top,right},%
 		%capbesideposition=outside,
-		capbesideframe=yes,
+		capbesideframe=yes,%
 		capbesidewidth=\marginparwidth, % Width of the caption equal to the width of the margin
-		capbesidesep=marginparsep,
+		capbesidesep=marginparsep,%
 		floatwidth=\textwidth, % Width of the figure equal to the width of the text
 	}
 	\floatsetup[widetable]{ % Captions for wide tables
 		margins=hangright, % Put captions above the table
-		facing=no,
-		capposition=above
+		facing=no,%
+		capposition=above%
 	}
 	\floatsetup[lstlisting]{ % Captions for lstlisting
 		margins=hangright, % Put captions in the margin
-		facing=yes,
-		capposition=beside,
-		capbesideposition={top,right},
+		facing=yes,%
+		capposition=beside,%
+		capbesideposition={top,right},%
 		%capbesideposition=outside,
-		capbesideframe=yes,
+		capbesideframe=yes,%
 		capbesidewidth=\marginparwidth, % Width of the caption equal to the width of the margin
-		capbesidesep=marginparsep,
+		capbesidesep=marginparsep,%
 		floatwidth=\textwidth, % Width of the figure equal to the width of the text
 	}
 	\floatsetup[listing]{ % Captions for listing (minted package)
 		margins=hangright, % Put captions in the margin
-		facing=yes,
-		capposition=beside,
-		capbesideposition={top,right},
+		facing=yes,%
+		capposition=beside,%
+		capbesideposition={top,right},%
 		%capbesideposition=outside,
-		capbesideframe=yes,
+		capbesideframe=yes,%
 		capbesidewidth=\marginparwidth, % Width of the caption equal to the width of the margin
-		capbesidesep=marginparsep,
+		capbesidesep=marginparsep,%
 		floatwidth=\textwidth, % Width of the figure equal to the width of the text
 	}
 \fi
@@ -427,9 +428,9 @@
 \DeclareCaptionFormat{margin}{\@margin@par #1#2#3} % Declare a new style to format the caption according to \@margin@par (see above)
 \captionsetup{
 	format=margin, % Use the style previously declared
-	strut=no,
-	%%hypcap=true, % Links point to the top of the figure
-	singlelinecheck=false,
+	strut=no,%
+	%hypcap=true, % Links point to the top of the figure
+	singlelinecheck=false,%
 	%width=\marginparwidth,
 	indention=0pt, % Suppress indentation
 	parindent=0pt, % Suppress space between paragraphs
@@ -445,10 +446,10 @@
 %	TOC, LOF & LOT
 %----------------------------------------------------------------------------------------
 
-\RequirePackage{tocbasic}
+\RequirePackage{tocbasic}%
 
 % Show an entry for the TOC in the TOC
-\setuptoc{toc}{totoc}
+\setuptoc{toc}{totoc}%
 
 % Choose the levels in table of contents
 \setcounter{tocdepth}{\subsectiontocdepth}
@@ -479,29 +480,29 @@
 \newcommand{\margintoc}[1][\mtocshift]{ % The first parameter is the vertical offset; by default it is \mtocshift
 	\begingroup
 		% Set the style for section entries
-		\etocsetstyle{section}
-		{\parindent -5pt \parskip 0pt}
-		{\leftskip 0pt}
-		{\makebox[.5cm]{\etocnumber\autodot}
-		\etocname\nobreak\leaders\hbox{\hbox to 1.5ex {\hss.\hss}}\hfill\nobreak
-		\etocpage\par}
-		{}
+		\etocsetstyle{section}%
+		{\parindent -5pt \parskip 0pt}%
+		{\leftskip 0pt}%
+		{\makebox[.5cm]{\etocnumber\autodot}%
+		\etocname\nobreak\leaders\hbox{\hbox to 1.5ex {\hss.\hss}}\hfill\nobreak%
+		\etocpage\par}%
+		{}%
 		% Set the style for subsection entries
-		\etocsetstyle{subsection}
-		{\parindent -5pt \parskip 0pt}
-		{\leftskip 0pt}
-		{\makebox[.5cm]{}
-		\etocname\nobreak\leaders\hbox{\hbox to 1.5ex {\hss.\hss}}\hfill\nobreak
-		\etocpage\par}
-		{}
+		\etocsetstyle{subsection}%
+		{\parindent -5pt \parskip 0pt}%
+		{\leftskip 0pt}%
+		{\makebox[.5cm]{}%
+		\etocname\nobreak\leaders\hbox{\hbox to 1.5ex {\hss.\hss}}\hfill\nobreak%
+		\etocpage\par}%
+		{}%
 		% Set the global style of the toc
 		%\etocsettocstyle{}{}
 		%\etocsettocstyle{\normalfont\sffamily\normalsize}{}
-		\etocsettocstyle{\usekomafont{section}\small}{}
-		\etocsetnexttocdepth{\themargintocdepth}
+		\etocsettocstyle{\usekomafont{section}\small}{}%
+		\etocsetnexttocdepth{\themargintocdepth}%
 		% Print the table of contents in the margin
-		\marginnote[#1]{\localtableofcontents}
-	\endgroup
+		\marginnote[#1]{\localtableofcontents}%
+	\endgroup%
 }
 
 %----------------------------------------------------------------------------------------
@@ -536,7 +537,6 @@
 % Layout #1: large margins
 \newcommand{\marginlayout}{%
 	\newgeometry{
-		a4paper,
 		top=27.4mm,
 		bottom=27.4mm,
 		inner=24.8mm,
@@ -550,7 +550,6 @@
 % Layout #2: no margins at all
 \newcommand{\widelayout}{%
 	\newgeometry{
-		a4paper,
 		top=27.4mm,
 		bottom=27.4mm,
 		inner=24.8mm,
@@ -564,7 +563,6 @@
 % Layout #3: no margins and no space above or below the body
 \newcommand{\fullwidthpage}{%
 	\newgeometry{
-		a4paper,
 		top=0cm,
 		bottom=0cm,
 		inner=0cm,
@@ -592,15 +590,15 @@
 \renewpagestyle{scrheadings}{%
 	{\hspace{-\marginparwidth}\hspace{-\marginparsep}\makebox[\overflowingheadlen][l]{%
 		\parbox[t][1.7cm][c]{2em}{\hfill\thepage}%
-		\makebox[2em][c]{\rule[-1.15cm]{1pt}{1.55cm}}%
+		\makebox[2em][c]{\rule[-1.03cm]{1pt}{1.55cm}}%
 		\parbox[t][1.7cm][c]{\textwidth}{\leftmark}}}%
 	{\makebox[\overflowingheadlen][r]{%
 		\parbox[t][1.7cm][c]{\textwidth}{\hfill\rightmark}%
-		\makebox[2em][c]{\rule[-1.15cm]{1pt}{1.55cm}}%
+		\makebox[2em][c]{\rule[-1.03cm]{1pt}{1.55cm}}%
 		\parbox[t][1.7cm][c]{2em}{\thepage}}}%
 	{\makebox[\overflowingheadlen][r]{%
 		\parbox[t][1.7cm][c]{\textwidth}{\hfill\rightmark}%
-		\makebox[2em][c]{\rule[-1.15cm]{1pt}{1.55cm}}%
+		\makebox[2em][c]{\rule[-1.03cm]{1pt}{1.55cm}}%
 		\parbox[t][1.7cm][c]{2em}{\thepage}}}%
 }{%
 	{}%
@@ -637,16 +635,44 @@
 %	ENCODING AND FONTS
 %----------------------------------------------------------------------------------------
 
-\RequirePackage[T1]{fontenc} % utf8 encoding in the output (.pdf) file
-\RequirePackage[utf8]{inputenc} % utf8 encoding in the input (.tex) file
+% https://tex.stackexchange.com/questions/47576/combining-ifxetex-and-ifluatex-with-the-logical-or-operation
+\newif\ifxetexorluatex
+\ifxetex
+	\xetexorluatextrue
+\else
+	\ifluatex
+		\xetexorluatextrue
+	\else
+		\xetexorluatexfalse
+	\fi
+\fi
 
-\RequirePackage[scaled=.97,helvratio=.93,p,theoremfont]{newpxtext} % Serif palatino font
-\RequirePackage[vvarbb,smallerops,bigdelims]{newpxmath} % Math palatino font
-\RequirePackage[scaled=.85]{beramono} % Monospace font
-\RequirePackage[scr=rsfso,cal=boondoxo]{mathalfa} % Mathcal from STIX, unslanted a bit
-\RequirePackage{bm} % Bold math
+\ifxetexorluatex
+	\RequirePackage{unicode-math}
+	\setromanfont[
+		Scale=1.04
+	]{Libertinus Serif}
+	\setsansfont[
+		Scale=1
+	]{Libertinus Sans}
+	\setmonofont[
+		Scale=.89
+	]{Liberation Mono}
+	\setmathfont{Libertinus Math}
+\else
+	\RequirePackage[utf8]{inputenc} % utf8 encoding in the input (.tex) file
+	\RequirePackage[T1]{fontenc} % utf8 encoding in the output (.pdf) file
 
-% When using the Palatino (mathpazo) font, it is better to use a slightly larger stretch.
+	\RequirePackage[scaled=.97,helvratio=.93,p,theoremfont]{newpxtext} % Serif palatino font
+	\RequirePackage[vvarbb,smallerops,bigdelims]{newpxmath} % Math palatino font
+	\RequirePackage[scaled=.85]{beramono} % Monospace font
+	\RequirePackage[scr=rsfso,cal=boondoxo]{mathalfa} % Mathcal from STIX, unslanted a bit
+	\RequirePackage{amsfonts} % Mathematical fonts
+	\RequirePackage{amssymb} % Math symbols, including \blacktriangleright, used for bullets
+\fi
+
+% When using the Palatino (newpxtext) font, it is better to use a 
+% slightly larger stretch.
 %\setstretch{1.10}
 \linespread{1.07} % Give Palatino more leading (space between lines)
 
