--- a/styles/kaobiblio.sty
+++ b/styles/kaobiblio.sty
@@ -1,5 +1,5 @@
 %% kaobiblio.sty
-%% Copyright 2019 Federico Marotta
+%% Copyright 2020 Federico Marotta
 %
 % This work may be distributed and/or modified under the
 % conditions of the LaTeX Project Public License, either version 1.3
@@ -15,7 +15,7 @@
 %
 % This work consists of all the files listed in MANIFEST.md.
 
-\ProvidesPackage{styles/kaobiblio}
+\ProvidesPackage{styles/kaobiblio}[2020/03/12 v1.0 kaobiblio]
 
 \RequirePackage{etoolbox} % Easy programming to modify TeX stuff
 \RequirePackage{calc} % Operations like sums and differences
@@ -74,23 +74,40 @@
 % Check if a string is in a comma-separated list
 \newcommand\IfStringInList[2]{\IfSubStr{,#2,}{,#1,}}
 
-% Set the back reference strings
-\IfStringInList{english}{\bbl@loaded}{
-	\DefineBibliographyStrings{english}{%
-		backrefpage = {cited on page},
-		backrefpages = {cited on pages},
-	}
-}{}
-\IfStringInList{italian}{\bbl@loaded}{
-	\DefineBibliographyStrings{italian}{%
-		backrefpage = {citato a pag.},
-		backrefpages = {citato a pagg.},
-	}
-}{}
+% Set the language-specific back reference strings
+\@ifpackageloaded{polyglossia}{%
+	\iflanguage{english}{%
+		\DefineBibliographyStrings{english}{%
+			backrefpage = {cited on page},
+			backrefpages = {cited on pages},
+		}
+	}{}
+	\iflanguage{italian}{%
+		\DefineBibliographyStrings{italian}{%
+			backrefpage = {citato a pag.},
+			backrefpages = {citato a pagg.},
+		}
+	}{}
+}{
+	\IfStringInList{english}{\bbl@loaded}{%
+		\DefineBibliographyStrings{english}{%
+			backrefpage = {cited on page},
+			backrefpages = {cited on pages},
+		}
+	}{}
+	\IfStringInList{italian}{\bbl@loaded}{%
+		\DefineBibliographyStrings{italian}{%
+			backrefpage = {citato a pag.},
+			backrefpages = {citato a pagg.},
+		}
+	}{}
+}
 
 %----------------------------------------------------------------------------------------
 %	CITATION COMMANDS
 %----------------------------------------------------------------------------------------
+
+% TODO: perhaps use biblatex's \citecommands
 
 \newlength\sclen
 
